added decision tree

--- a/notebooks/nontree_traditional_ML.ipynb
+++ b/notebooks/nontree_traditional_ML.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "72b5adf8-13ae-488b-9c73-4bd656bff6c6",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Non-Tree based algorithms"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "id": "6a8a44b3-ab45-4310-8964-5bc80c8de799",
@@ -796,14 +806,6 @@
     "plt.xlabel(\"Radius\")\n",
     "plt.ylabel(\"Score\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7ecb95af-7022-482d-9c3d-c5fa82cbc4cb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
