--- a/notebooks/nontree_traditional_ML.ipynb
+++ b/notebooks/nontree_traditional_ML.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "id": "6a8a44b3-ab45-4310-8964-5bc80c8de799",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "grd = pd.read_csv(\"graphene_data_final.csv\")"
+    "grd = pd.read_csv(\"../data/graphene_data_final.csv\")"
    ]
   },
   {
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "0916850d-e2b3-4c0e-bcf4-c690daf4b415",
    "metadata": {},
    "outputs": [
@@ -651,7 +651,7 @@
        "Text(0, 0.5, 'Score')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "ac2a7b1a-5ac1-42e9-ac69-ee02ed56fb09",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
        "0.7939939304979726"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "id": "f3aeb795-8099-4c49-9c01-ec62c53af397",
    "metadata": {},
    "outputs": [
@@ -714,7 +714,7 @@
        "Text(0, 0.5, 'Score')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "id": "aaff7c05-46d7-4eac-963c-2c9351532d39",
    "metadata": {},
    "outputs": [
@@ -756,7 +756,7 @@
        "0.8783455089359131"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "id": "f93ddc4c-3902-433f-a637-9d37cac30613",
    "metadata": {},
    "outputs": [
@@ -777,7 +777,7 @@
        "Text(0, 0.5, 'Score')"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
