--- a/notebooks/decision_tree_regressor.ipynb
+++ b/notebooks/decision_tree_regressor.ipynb
@@ -59,72 +59,32 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "770688e1-8b69-41db-8120-64a76602c603",
+   "id": "a5f60187-daaa-4668-96b8-d0ea2b06e3d7",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['BaseDecisionTree',\n",
-       " 'DecisionTreeClassifier',\n",
-       " 'DecisionTreeRegressor',\n",
-       " 'ExtraTreeClassifier',\n",
-       " 'ExtraTreeRegressor',\n",
-       " '__all__',\n",
-       " '__builtins__',\n",
-       " '__cached__',\n",
-       " '__doc__',\n",
-       " '__file__',\n",
-       " '__loader__',\n",
-       " '__name__',\n",
-       " '__package__',\n",
-       " '__path__',\n",
-       " '__spec__',\n",
-       " '_classes',\n",
-       " '_criterion',\n",
-       " '_export',\n",
-       " '_reingold_tilford',\n",
-       " '_splitter',\n",
-       " '_tree',\n",
-       " '_utils',\n",
-       " 'export_graphviz',\n",
-       " 'export_text',\n",
-       " 'plot_tree']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8456605882420749\n"
+     ]
     }
    ],
    "source": [
-    "dir(tree)"
+    "print(tree.DecisionTreeRegressor().fit(X_train,Y_train).score(X_test,Y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4bd7d80-514a-4d45-84b0-0da913c2091f",
+   "metadata": {},
+   "source": [
+    "#### Maximum depth vs Test score"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a5f60187-daaa-4668-96b8-d0ea2b06e3d7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8456605882420749"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tree.DecisionTreeRegressor().fit(X_train,Y_train).score(X_test,Y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
    "id": "f9e46b7c-4172-438e-9722-79f8d1781dbb",
    "metadata": {},
    "outputs": [
@@ -132,12 +92,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1  0.34215504461832535\n",
-      "2  0.6584615859318392\n",
+      "1  0.34215504461832547\n",
+      "2  0.6584615859318391\n",
       "3  0.7683696377168678\n",
-      "4  0.8427968886279223\n",
+      "4  0.8427968886279222\n",
       "5  0.8294883692112021\n",
-      "6  0.8316129305883023\n",
+      "6  0.8316129305883024\n",
       "7  0.8497825924673458\n",
       "8  0.8456605882420749\n",
       "9  0.8456605882420749\n"
@@ -151,8 +111,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b029a77e-d298-4ca3-913c-e377129f2e8f",
+   "metadata": {},
+   "source": [
+    "#### Minimum Sample Split vs Test score"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "af5f4cee-af7b-4855-9b84-7e3fde1df859",
    "metadata": {},
    "outputs": [
@@ -164,20 +132,20 @@
       "3  0.8470616635414071\n",
       "4  0.860390263796653\n",
       "5  0.8701307304048008\n",
-      "6  0.8473999412257507\n",
+      "6  0.8473999412257508\n",
       "7  0.8467823180570306\n",
-      "8  0.8461547716851097\n",
-      "9  0.8383191686380057\n",
-      "10  0.8432851400474273\n",
+      "8  0.8461547716851098\n",
+      "9  0.8383191686380058\n",
+      "10  0.8432851400474274\n",
       "11  0.8432564135002852\n",
-      "12  0.8464894105095316\n",
+      "12  0.8464894105095315\n",
       "13  0.8513055680304796\n",
       "14  0.8513055680304796\n",
       "15  0.8513055680304796\n",
       "16  0.8513055680304796\n",
-      "17  0.8513055680304795\n",
-      "18  0.8534638877180605\n",
-      "19  0.8332526763504087\n",
+      "17  0.8513055680304796\n",
+      "18  0.8534638877180606\n",
+      "19  0.8332526763504086\n",
       "20  0.8332526763504087\n"
      ]
     }
@@ -189,8 +157,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b4de8b6-13e1-4fbe-9072-bca3b98d7e9d",
+   "metadata": {},
+   "source": [
+    "#### Leaf count vs Test score"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "f246f224-7ae8-4f38-b0b0-ff5573825a25",
    "metadata": {},
    "outputs": [
@@ -200,7 +176,7 @@
      "text": [
       "2  0.8629876868642068\n",
       "3  0.8472328331455621\n",
-      "4  0.8522967533572814\n",
+      "4  0.8522967533572813\n",
       "5  0.8551022398855789\n",
       "6  0.8493352290787524\n",
       "7  0.8496606267024551\n",
@@ -215,8 +191,8 @@
       "16  0.7213185183452002\n",
       "17  0.7213185183452002\n",
       "18  0.7213185183452002\n",
-      "19  0.5695004993981045\n",
-      "20  0.5695004993981048\n"
+      "19  0.5695004993981048\n",
+      "20  0.5695004993981045\n"
      ]
     }
    ],
@@ -228,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "8109c7f6-3010-4fda-bbd8-48bbd2d68a15",
    "metadata": {},
    "outputs": [
@@ -238,7 +214,7 @@
        "DecisionTreeRegressor(max_depth=7, min_samples_leaf=2, min_samples_split=5)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,23 +226,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "d9db5761-586d-43f2-abaa-92bd63ddc5e8",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.8701307304048008"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8701307304048008\n"
+     ]
     }
    ],
    "source": [
-    "best_tree.score(X_test,Y_test)"
+    "print(best_tree.score(X_test,Y_test))"
    ]
   }
  ],
