--- a/notebooks/nontree_traditional_ML.ipynb
+++ b/notebooks/nontree_traditional_ML.ipynb
@@ -69,18 +69,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.814927969191502"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.814927969191502\n"
+     ]
     }
    ],
    "source": [
-    "reg.score(X_test,Y_test)"
+    "print(reg.score(X_test,Y_test))"
    ]
   },
   {
@@ -90,18 +87,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.814927969191502"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.814927969191502\n"
+     ]
     }
    ],
    "source": [
-    "reg.score(X_test,Y_test)"
+    "print(reg.score(X_test,Y_test))"
    ]
   },
   {
@@ -480,31 +474,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cac13f55-cf78-48d5-b0bf-1a62e731fe2f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "id": "0abb4f43-f011-4f15-9f0e-ce5d3bd0ad51",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-13867810.470065743"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-13867810.470065743\n"
+     ]
     }
    ],
    "source": [
-    "reg2.score(X_test,Y_test)"
+    "print(reg2.score(X_test,Y_test))"
    ]
   },
   {
