improved plot added new better random forest

--- a/notebooks/random_forest.ipynb
+++ b/notebooks/random_forest.ipynb
@@ -54,7 +54,7 @@
    "outputs": [],
    "source": [
     "X, Y = grd[['Graphene_percentage', 'FEED', 'RPM', 'DOC']], grd['MRR_gm_per_sec']\n",
-    "Y2 = grd['Ra']\n",
+    "#Y2 = grd['Ra']\n",
     "X2 = grd[['FEED','DOC']]"
    ]
   },
@@ -65,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train2, X_test2, Y_train3, Y_test3 = train_test_split(X2, Y, test_size=0.3, random_state=33)"
+    "X_train2, X_test2, Y_train2, Y_test2 = train_test_split(X2, Y, test_size=0.3, random_state=33)"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "outputs": [],
    "source": [
     "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.3, random_state=42)\n",
-    "X_train, X_test, Y2_train, Y2_test = train_test_split(X, Y2, test_size=0.3, random_state=16)"
+    "##X_train, X_test, Y2_train, Y2_test = train_test_split(X, Y2, test_size=0.3, random_state=16)"
    ]
   },
   {
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "543d6cd9-b6f9-4a32-ae8b-de93fc1dc57a",
    "metadata": {
     "id": "543d6cd9-b6f9-4a32-ae8b-de93fc1dc57a"
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "d89d58be-c64a-4482-a1e3-9dd5a8116992",
    "metadata": {
     "colab": {
@@ -130,7 +130,7 @@
        "                         'n_estimators': [30, 50, 70, 100, 150, 200]})"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "EfvE_xvTZgIK",
    "metadata": {
     "colab": {
@@ -155,10 +155,10 @@
     {
      "data": {
       "text/plain": [
-       "0.47979008174714566"
+       "0.9034865985648013"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "c4bf2e19-47df-4e66-8446-cf1ca687488f",
    "metadata": {
     "colab": {
@@ -182,10 +182,10 @@
     {
      "data": {
       "text/plain": [
-       "-0.017726002854155487"
+       "0.8990755678317426"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "ztScfP-1Z_9C",
    "metadata": {
     "id": "ztScfP-1Z_9C"
@@ -208,25 +208,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "59b35c0b-40aa-4673-a3ce-d2d516b74a0e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "7d98efb8-0da3-4757-9009-f3670a178e16",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.11229392036429342"
+       "0.9124443472953291"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "8wznfql1iAmh",
    "metadata": {
     "colab": {
@@ -250,10 +242,10 @@
     {
      "data": {
       "text/plain": [
-       "-0.11229392036429342"
+       "0.9124443472953291"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "Rw4IkP8LiIN4",
    "metadata": {
     "colab": {
@@ -277,10 +269,10 @@
     {
      "data": {
       "text/plain": [
-       "0.47230601266585204"
+       "0.9252891429445487"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "kC1n7eQdi2T8",
    "metadata": {
     "id": "kC1n7eQdi2T8"
@@ -303,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "xOyWVMSYileb",
    "metadata": {
     "colab": {
@@ -319,19 +311,19 @@
        "['fit_time', 'score_time', 'test_score']"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cv_results = cross_validate(rfr3, X, Y, cv=4)\n",
+    "cv_results = cross_validate(rfr3, X, Y, cv=5)\n",
     "sorted(cv_results.keys())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "5hDcPqmpis_U",
    "metadata": {
     "colab": {
@@ -344,10 +336,10 @@
     {
      "data": {
       "text/plain": [
-       "array([0.86258481, 0.79918091, 0.88233922, 0.87413272])"
+       "array([0.86716287, 0.82100326, 0.80034666, 0.9166014 , 0.92575573])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,10 +350,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "5a311d85-bd09-4492-a46b-db19b73adc3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Y_train3' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [18]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m rfr4\u001b[38;5;241m=\u001b[39mRandomForestRegressor(n_estimators\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1200\u001b[39m,\n\u001b[1;32m      2\u001b[0m                            max_depth\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m11\u001b[39m,\n\u001b[1;32m      3\u001b[0m                            min_samples_leaf\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m,\n\u001b[0;32m----> 4\u001b[0m                            min_samples_split\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m)\u001b[38;5;241m.\u001b[39mfit(X_train2, \u001b[43mY_train3\u001b[49m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Y_train3' is not defined"
+     ]
+    }
+   ],
    "source": [
     "rfr4=RandomForestRegressor(n_estimators=1200,\n",
     "                           max_depth=11,\n",
@@ -371,37 +375,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "5b8cc801-9440-4080-bf63-6db7d944f0db",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9416226720884242"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rfr4.score(X_test2, Y_test3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "id": "8b3c5722-a364-451c-b6c8-56f819269b34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfr5 = RandomForestRegressor().fit(X_train,Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ce86497-527f-4275-905f-849cfcd8e618",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rfr5.score(X_test,Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a1f4e3a6-7526-4dbb-8631-8f810c077b12",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "\n",
     "# save\n",
-    "with open('../trained_models/best_random_forest.pkl','wb') as f:\n",
-    "    pickle.dump(rfr4,f)\n"
+    "with open('../trained_models/twovar_random_forest.pkl','wb') as f:\n",
+    "    pickle.dump(rfr4,f)\n",
+    "with open('../trained_models/fourvar_random_forest.pkl','wb') as p:\n",
+    "    pickle.dump(rfr5,p)"
    ]
   }
  ],
