random forest finished

--- a/notebooks/random_forest.ipynb
+++ b/notebooks/random_forest.ipynb
@@ -19,7 +19,7 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.model_selection import cross_validate"
+    "from sklearn.model_selection import KFold"
    ]
   },
   {
@@ -54,36 +54,25 @@
    "outputs": [],
    "source": [
     "X, Y = grd[['Graphene_percentage', 'FEED', 'RPM', 'DOC']], grd['MRR_gm_per_sec']\n",
-    "#Y2 = grd['Ra']\n",
-    "X2 = grd[['FEED','DOC']]"
+    "Y2 = grd['Ra']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "12e83ee2-1fe5-455e-a874-8a76aaad5d96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train2, X_test2, Y_train2, Y_test2 = train_test_split(X2, Y, test_size=0.3, random_state=33)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "992786de-9dd6-47de-a4ed-7a466f6cb805",
    "metadata": {
     "id": "992786de-9dd6-47de-a4ed-7a466f6cb805"
    },
    "outputs": [],
    "source": [
-    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.3, random_state=42)\n",
-    "##X_train, X_test, Y2_train, Y2_test = train_test_split(X, Y2, test_size=0.3, random_state=16)"
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.3, random_state=2)#)\n",
+    "X_train2, X_test2, Y2_train, Y2_test = train_test_split(X, Y2, test_size=0.3, random_state=16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "0ad2715b-b32d-46fa-a672-7aaee443d1af",
    "metadata": {
     "id": "0ad2715b-b32d-46fa-a672-7aaee443d1af"
@@ -95,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "543d6cd9-b6f9-4a32-ae8b-de93fc1dc57a",
    "metadata": {
     "id": "543d6cd9-b6f9-4a32-ae8b-de93fc1dc57a"
@@ -103,15 +92,16 @@
    "outputs": [],
    "source": [
     "param_grid = { \n",
-    "    'n_estimators': [30,50,70,100,150,200],\n",
+    "    'n_estimators': [5,10,15,20,30,70,100],\n",
+    "    'min_samples_split': [2,4,8,12,16],\n",
     "    'max_features': ['auto', 'sqrt', 'log2'],\n",
-    "    'max_depth' : [1,2,3,4,5,6,7,8],\n",
+    "    'max_depth' : [1,3,5,7,9,11,13,15],\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d89d58be-c64a-4482-a1e3-9dd5a8116992",
    "metadata": {
     "colab": {
@@ -125,12 +115,13 @@
      "data": {
       "text/plain": [
        "GridSearchCV(cv=5, estimator=RandomForestRegressor(random_state=42),\n",
-       "             param_grid={'max_depth': [1, 2, 3, 4, 5, 6, 7, 8],\n",
+       "             param_grid={'max_depth': [1, 3, 5, 7, 9, 11, 13, 15],\n",
        "                         'max_features': ['auto', 'sqrt', 'log2'],\n",
-       "                         'n_estimators': [30, 50, 70, 100, 150, 200]})"
+       "                         'min_samples_split': [2, 4, 8, 12, 16],\n",
+       "                         'n_estimators': [5, 10, 15, 20, 30, 70, 100]})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "EfvE_xvTZgIK",
    "metadata": {
     "colab": {
@@ -155,10 +146,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9034865985648013"
+       "0.9379428352354985"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "c4bf2e19-47df-4e66-8446-cf1ca687488f",
    "metadata": {
     "colab": {
@@ -182,10 +173,10 @@
     {
      "data": {
       "text/plain": [
-       "0.8990755678317426"
+       "0.8687536821707537"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,26 +187,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "0497f049-3814-4265-98ca-cf570aead41c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'max_depth': 5, 'max_features': 'auto', 'min_samples_split': 8, 'n_estimators': 5}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(CV_rfr.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
-   "id": "ztScfP-1Z_9C",
-   "metadata": {
-    "id": "ztScfP-1Z_9C"
-   },
+   "id": "2d0005da-5825-457e-b8b9-801d42c30a2e",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "rfr2=RandomForestRegressor(n_estimators=100,max_depth=11,min_samples_split=8).fit(X_train, Y_train)"
+    "rfr2 = RandomForestRegressor(random_state=21)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7d98efb8-0da3-4757-9009-f3670a178e16",
+   "id": "3777e6f2-78cf-4bd1-a32a-440b879ef9b4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9124443472953291"
+       "GridSearchCV(cv=5, estimator=RandomForestRegressor(random_state=21),\n",
+       "             param_grid={'max_depth': [1, 3, 5, 7, 9, 11, 13, 15],\n",
+       "                         'max_features': ['auto', 'sqrt', 'log2'],\n",
+       "                         'min_samples_split': [2, 4, 8, 12, 16],\n",
+       "                         'n_estimators': [5, 10, 15, 20, 30, 70, 100]})"
       ]
      },
      "execution_count": 12,
@@ -224,25 +235,22 @@
     }
    ],
    "source": [
-    "rfr2.score(X_test, Y_test)"
+    "CV_rfr2 = GridSearchCV(estimator=rfr2, param_grid=param_grid, cv= 5)\n",
+    "CV_rfr2.fit(X_train2, Y2_train)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8wznfql1iAmh",
+   "id": "76e9f4c0-1d77-4fa8-abb5-75764ed85a2c",
    "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "8wznfql1iAmh",
-    "outputId": "73534a15-f0fd-4977-b319-0752b8e05a98"
+    "tags": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9124443472953291"
+       "0.5041910321714542"
       ]
      },
      "execution_count": 13,
@@ -251,171 +259,56 @@
     }
    ],
    "source": [
-    "rfr2.score(X_test, Y_test)"
+    "CV_rfr2.score(X_test2, Y2_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "Rw4IkP8LiIN4",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "Rw4IkP8LiIN4",
-    "outputId": "74138837-536e-4552-d57f-6923b4bfa044"
-   },
+   "id": "11483398-f6ef-42cd-8738-ca77188e2064",
+   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9252891429445487"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'max_depth': 7, 'max_features': 'sqrt', 'min_samples_split': 4, 'n_estimators': 30}\n"
+     ]
     }
    ],
    "source": [
-    "rfr2.score(X_train, Y_train)"
+    "print(CV_rfr2.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21b66f07-973d-4f3a-b4de-9ec7ec492f96",
+   "metadata": {},
+   "source": [
+    "Now let's save the models for further usage."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "kC1n7eQdi2T8",
-   "metadata": {
-    "id": "kC1n7eQdi2T8"
-   },
-   "outputs": [],
-   "source": [
-    "rfr3=RandomForestRegressor()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "xOyWVMSYileb",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "xOyWVMSYileb",
-    "outputId": "12328f1d-6356-46d6-84da-18db6a3ad688"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['fit_time', 'score_time', 'test_score']"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cv_results = cross_validate(rfr3, X, Y, cv=5)\n",
-    "sorted(cv_results.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "5hDcPqmpis_U",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "5hDcPqmpis_U",
-    "outputId": "7c0b1758-f87f-479a-8545-526e48103e11"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.86716287, 0.82100326, 0.80034666, 0.9166014 , 0.92575573])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cv_results['test_score']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "5a311d85-bd09-4492-a46b-db19b73adc3c",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Y_train3' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [18]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m rfr4\u001b[38;5;241m=\u001b[39mRandomForestRegressor(n_estimators\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1200\u001b[39m,\n\u001b[1;32m      2\u001b[0m                            max_depth\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m11\u001b[39m,\n\u001b[1;32m      3\u001b[0m                            min_samples_leaf\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m,\n\u001b[0;32m----> 4\u001b[0m                            min_samples_split\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m8\u001b[39m)\u001b[38;5;241m.\u001b[39mfit(X_train2, \u001b[43mY_train3\u001b[49m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Y_train3' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "rfr4=RandomForestRegressor(n_estimators=1200,\n",
-    "                           max_depth=11,\n",
-    "                           min_samples_leaf=2,\n",
-    "                           min_samples_split=8).fit(X_train2, Y_train3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5b8cc801-9440-4080-bf63-6db7d944f0db",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rfr4.score(X_test2, Y_test3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b3c5722-a364-451c-b6c8-56f819269b34",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rfr5 = RandomForestRegressor().fit(X_train,Y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6ce86497-527f-4275-905f-849cfcd8e618",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rfr5.score(X_test,Y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a1f4e3a6-7526-4dbb-8631-8f810c077b12",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "# save\n",
-    "with open('../trained_models/twovar_random_forest.pkl','wb') as f:\n",
-    "    pickle.dump(rfr4,f)\n",
-    "with open('../trained_models/fourvar_random_forest.pkl','wb') as p:\n",
-    "    pickle.dump(rfr5,p)"
+    "with open('../trained_models/random_forest_MRR.pkl','wb') as f:\n",
+    "    pickle.dump(CV_rfr,f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4f2cc7b1-1132-4519-b60a-9d658dcebe55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../trained_models/random_forest_RA.pkl','wb') as f:\n",
+    "    pickle.dump(CV_rfr2,f)"
    ]
   }
  ],
